# vis_pyvista

./: .gitignore  README.md  pyproject.toml  setup.py
src/utils/: download.py  pin_model.py  utils.py  vis_pyvista.py  vis_save.py
vis_pyvista/: download.py  pin_model.py  utils.py  vis_pyvista.py  vis_save.py
